--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>737</width>
+    <width>735</width>
     <height>541</height>
    </rect>
   </property>
@@ -26,7 +26,7 @@
       <x>10</x>
       <y>0</y>
       <width>721</width>
-      <height>481</height>
+      <height>491</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -34,7 +34,7 @@
     </property>
     <widget class="QWidget" name="chart">
      <attribute name="title">
-      <string>График</string>
+      <string>Сигналы МТ-48</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout">
       <item row="1" column="0" colspan="3">
@@ -179,6 +179,20 @@
       </item>
      </layout>
     </widget>
+    <widget class="QWidget" name="hvpsource">
+     <attribute name="title">
+      <string>Высоковольтный источник питания</string>
+     </attribute>
+     <layout class="QGridLayout" name="gridLayout_4">
+      <item row="0" column="0">
+       <layout class="QGridLayout" name="gridWidget2">
+        <item row="0" column="0">
+         <widget class="QCustomPlot" name="hvpsPlot" native="true"/>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -186,7 +200,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>737</width>
+     <width>735</width>
      <height>25</height>
     </rect>
    </property>
